fix buttons alignment

--- a/src/code/styles.css
+++ b/src/code/styles.css
@@ -92,9 +92,9 @@ canvas {
     border-radius: 5px;
     cursor: pointer;
     
-    width: 15%;
-    left: 45%;
-    top: 20%;
+    width:  20%;
+    left:   40%;
+    top:    20%;
     margin: 30px 0px 0px 0px;
     position: relative;
     font-size: 20px;
